Amélioration de l'indentation du html

--- a/test.html
+++ b/test.html
@@ -37,12 +37,16 @@
 					<p>Il distribue la balle en étant souvent un peu en recul par rapport à son équipe lors des attaques et mène le jeu.</p>
 					</li>
 					
-					<li>Arrières</li>
-					<p>Les arrières ont le choix entre passer la balle au demi ou aux ailiers, ou de faire un tir en extension au-dessus de la défense.</p>
-					<li>Ailiers</li>
-					<p>Les contre-attaques sont leur point fort, ils traversent le terrain rapidement et doivent savoir tirer parfaitement sur les ailes.</p>
-					<li>Pivot</li>
-					<p>Son but est de s'infiltrer dans la défense et d'attendre une passe avant de tirer sans difficultés.</p>
+					<li>Arrières
+						<p>Les arrières ont le choix entre passer la balle au demi ou aux ailiers, ou de faire un tir en extension au-dessus de la défense.</p>
+					</li>	
+					<li>Ailiers
+						<p>Les contre-attaques sont leur point fort, ils traversent le terrain rapidement et doivent savoir tirer parfaitement sur les ailes.</p>
+					</li>	
+					<li>Pivot
+						<p>Son but est de s'infiltrer dans la défense et d'attendre une passe 
+						avant de tirer sans difficultés.</p>
+					</li>	
 				</ul>
 			</div>
 
@@ -54,15 +58,19 @@
 					<p>Gardien de but</p>
 				</li>
 				
-				<li>Maxime</li>
-				<p>Demi-Centre, aidé de se grande taille il peut attraper les balles les plus hautes.</p>
-				<li>Aurimas et Arthur</li>
-				<p>Aurimas, rapide et tire sur les ailes facilement.
-				Arthur, passes de qualités.</p>
-				<li>Pierre et Arjune</li>
-				<p>Tirent en extension au dessus de la défense et contre-attaques.</p>
-				<li>Gaspar</li>
-				<p>Endurant pour gêner les attaques adverses en courant après la balle.</p>
+				<li>Maxime
+					<p>Demi-Centre, aidé de se grande taille il peut attraper les balles les plus hautes.</p>
+				</li>
+				<li>Aurimas et Arthur
+					<p>Aurimas, rapide et tire sur les ailes facilement.
+					Arthur, passes de qualités.</p>
+				</li>	
+				<li>Pierre et Arjune
+					<p>Tirent en extension au dessus de la défense et contre-attaques.</p>
+				</li>	
+				<li>Gaspar
+					<p>Endurant pour gêner les attaques adverses en courant après la balle.</p>
+				</li>	
 			</ul>
 		</div>
 
