Meilleure disposition de l'image handball

--- a/test.html
+++ b/test.html
@@ -5,11 +5,10 @@
 		<meta charset="utf-8">
     	<link rel="stylesheet" type="text/css" href="./style.css">
 	</head>
+
 	<body>
 		<h1>AS Handball - Collège Les Hauts Grillets</h1>
-		<img src="/Users/pierre/Dropbox/site_web/images/handball.jpg" alt="Logo Handball" /><br>
-<img src="images/handball.jpg" alt="Logo Handball" />
-<img src="http://www.rms-network.com/upload/news/20131025154708-56829-pwsm.jpg" width='400px'/>
+		<img id="logo_handball" src="http://www.rms-network.com/upload/news/20131025154708-56829-pwsm.jpg"/>
 		<h2>Sommaire</h2>
 		<ul>
 			<li> <a href="#handball">Qu'est-ce que le Handball ?</a> </li>
