Ajout du menu "Catégories"

--- a/acceuil.html
+++ b/acceuil.html
@@ -8,5 +8,17 @@
 		<div class="pub">
 			<img src="http://misterbonneaffaireci.wifeo.com/images/p/pub/PUBLICITE-ORDINATEUR-Texte-et-photo.jpg">
 		</div>
+
+		<div class="menu">Catégories
+			<ul>
+				<li> <a href="/informatique.html">Informatique</a></li>
+				<li>Telephone</li>
+				<li>Audio</li>
+				<li>Musique</li>
+				<li>Livres</lI>	
+				<li>Photo</li>
+			</ul>	
+		</div>
+			
 	</body>
 </html>		
