Ajout du fil d'ariane

--- a/acceuil.html
+++ b/acceuil.html
@@ -19,6 +19,14 @@
 				<li>Photo</li>
 			</ul>	
 		</div>
+
+
+		<div <class="fildariane">
+		<ul>
+			<li> <a href="/acceuil.html"> Acceuil </a> </li>
+			<li> <a href="/informatique.html"> Informatique </a></li>
+			<li> <a href="/macbook_pro.html"> MacBook Pro </a></li>
+		</ul>	
 			
 	</body>
 </html>		
