--- a/acceuil.html
+++ b/acceuil.html
@@ -27,6 +27,19 @@
 			<li> <a href="/informatique.html"> Informatique </a></li>
 			<li> <a href="/macbook_pro.html"> MacBook Pro </a></li>
 		</ul>	
+		</div>
+
+		<div <class="produit">
+			<h2>MacBook Pro</h2>
+			<img src="http://i.pcworld.fr/51781-macbook-pro-13pouces-a.jpg">
+			<p> Écran Retina : écran rétroéclairé par LED de 13,3 pouces (diagonale) avec technologie IPS ; résolution de 2 560 x 1 600 pixels à 227 pixels par pouce avec prise en charge de millions de couleurs</p>
+			<p>2,4 GHz
+			Intel Core i5 bicœur à 2,4 GHz (Turbo Boost jusqu’à 2,9 GHz) avec 3 Mo de cache N3 partagé. </p>
+
+			<h3>1 299 €</h3>	
+
+
+
 			
 	</body>
 </html>		
