--- a/acceuil.html
+++ b/acceuil.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title> Vente </title>
+		<link rel="stylesheet" type="text.css" href="./vente.css"
 	</head>
 	
 	<body>	
