Correction class fildariane

--- a/acceuil.html
+++ b/acceuil.html
@@ -22,7 +22,7 @@
 		</div>
 
 
-		<div <class="fildariane">
+		<div class="fildariane">
 		<ul>
 			<li> <a href="/acceuil.html"> Acceuil </a> </li>
 			<li> <a href="/informatique.html"> Informatique </a></li>
