Correction erreurs chevrons

--- a/acceuil.html
+++ b/acceuil.html
@@ -2,12 +2,13 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title> Vente </title>
-		<link rel="stylesheet" type="text.css" href="./vente.css"
+		<link rel="stylesheet" type="text.css" href="./vente.css">
 	</head>
 	
 	<body>	
 		<div class="pub">
 			<img src="http://misterbonneaffaireci.wifeo.com/images/p/pub/PUBLICITE-ORDINATEUR-Texte-et-photo.jpg">
+			<a href='http://fnac.com'>En savoir plus </a>
 		</div>
 
 		<div class="menu">Catégories
@@ -23,22 +24,22 @@
 
 
 		<div class="fildariane">
-		<ul>
-			<li> <a href="/acceuil.html"> Acceuil </a> </li>
-			<li> <a href="/informatique.html"> Informatique </a></li>
-			<li> <a href="/macbook_pro.html"> MacBook Pro </a></li>
-		</ul>	
+			<ul>
+				<li> <a href="/acceuil.html"> Acceuil  > <a> </li>
+				<li> <a href="/informatique.html"> Informatique  > </a></li>
+				<li> <a href="/macbook_pro.html"> MacBook Pro </a></li>
+			</ul>	
 		</div>
 
-		<div <class="produit">
+		<div class="produit">
 			<h2>MacBook Pro</h2>
-			<img src="http://i.pcworld.fr/51781-macbook-pro-13pouces-a.jpg">
+			
 			<p> Écran Retina : écran rétroéclairé par LED de 13,3 pouces (diagonale) avec technologie IPS ; résolution de 2 560 x 1 600 pixels à 227 pixels par pouce avec prise en charge de millions de couleurs</p>
 			<p>2,4 GHz
 			Intel Core i5 bicœur à 2,4 GHz (Turbo Boost jusqu’à 2,9 GHz) avec 3 Mo de cache N3 partagé. </p>
 
 			<h3>1 299 €</h3>	
-
+		</div>	
 
 
 			
