--- a/acceuil.html
+++ b/acceuil.html
@@ -33,6 +33,7 @@
 
 		<div class="produit">
 			<h2>MacBook Pro</h2>
+			<img src="http://i.pcworld.fr/51781-macbook-pro-13pouces-a.jpg">
 			
 			<p> Écran Retina : écran rétroéclairé par LED de 13,3 pouces (diagonale) avec technologie IPS ; résolution de 2 560 x 1 600 pixels à 227 pixels par pouce avec prise en charge de millions de couleurs</p>
 			<p>2,4 GHz
