--- a/acceuil.html
+++ b/acceuil.html
@@ -3,6 +3,8 @@
 		<meta charset="utf-8"/>
 		<title> Vente </title>
 		<link rel="stylesheet" type="text.css" href="./vente.css">
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+		<script src="./script.js"></script>
 	</head>
 	
 	<body>	
@@ -39,7 +41,7 @@
 			<p>2,4 GHz
 			Intel Core i5 bicœur à 2,4 GHz (Turbo Boost jusqu’à 2,9 GHz) avec 3 Mo de cache N3 partagé. </p>
 
-			<h3>1 299 €</h3>	
+			<h3 id='price'>1 299 €</h3>	
 		</div>	
 
 
