--- a/ecommerce/acceuil.html
+++ b/ecommerce/acceuil.html
@@ -8,11 +8,7 @@
 	</head>
 	
 	<body>	
-		<div class="pub">
-			<img src="http://misterbonneaffaireci.wifeo.com/images/p/pub/PUBLICITE-ORDINATEUR-Texte-et-photo.jpg">
-			<a href='http://fnac.com'>En savoir plus </a>
-		</div>
-
+		<h1> Site E-Commerce </h1>
 		<div class="menu">Catégories
 			<ul>
 				<li> <a href="/informatique.html">Informatique</a></li>
