A la ligne resolution

--- a/ecommerce/acceuil.html
+++ b/ecommerce/acceuil.html
@@ -33,14 +33,13 @@
 			<h2>MacBook Pro</h2>
 			<img src="http://i.pcworld.fr/51781-macbook-pro-13pouces-a.jpg">
 			
-			<p> Écran Retina : écran rétroéclairé par LED de 13,3 pouces (diagonale) avec technologie IPS ; résolution de 2 560 x 1 600 pixels à 227 pixels par pouce avec prise en charge de millions de couleurs</p>
+			<p> Écran Retina : écran rétroéclairé par LED de 13,3 pouces (diagonale) avec technologie IPS ; résolution de 2 560 x<br> 
+			1 600 pixels à 227 pixels par pouce avec prise en charge de millions de couleurs</p>
 			<p>2,4 GHz
 			Intel Core i5 bicœur à 2,4 GHz (Turbo Boost jusqu’à 2,9 GHz) avec 3 Mo de cache N3 partagé. </p>
 
 			<h3 id='price'>1 299 €</h3>	
 		</div>	
-
-
 			
 	</body>
 </html>		
